[gd_scene load_steps=2 format=2]

[ext_resource path="res://2d-2botones/Dios2Bo.gd" type="Script" id=1]

[node name="Dios2Bo" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureButtonIz" type="TextureButton" parent="."]
margin_right = 502.0
margin_bottom = 624.0

[node name="TextureButtonDe" type="TextureButton" parent="."]
margin_left = 570.0
margin_top = 10.0
margin_right = 1072.0
margin_bottom = 634.0

[connection signal="pressed" from="TextureButtonIz" to="." method="_on_TextureButtonIz_pressed"]
[connection signal="pressed" from="TextureButtonDe" to="." method="_on_TextureButtonDe_pressed"]
